style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/* root-styling */
* {
    margin: 0;
    padding: 0;
}

/* body elements styling */
body {
    background-color: #EAE7DE;
    text-align: center;
}

/* Game Play-board title*/
h1 {
    margin: 15px;
    font-family: "Roboto", serif;
    font-optical-sizing: auto;
    font-weight: 900;
    text-decoration: underline;
}

/* Play-board*/
.container {
    height: 70vh;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

/* Play-board*/
.game {
    height: 60vmin;
    width: 60vmin;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 1.2vmin;
}

/* Play-board single button & hover */
.box {
    height: 18vmin;
    width: 18vmin;
    border-radius: 1.2rem;
    border: none;
    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.12);
    background-color: #ffffe4;
    font-size: 10vmin;
    color: #d90429;
}

.box:hover {
    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.501);
}

/* reset-button & hover */
.reset-button {
    background: #A4A860;
    color: rgb(23, 23, 23);
    font-size: 25px;
    font-weight: 540;
    padding: 10px;
    border: none;
    border-radius: 10px;
    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.104);
    cursor: pointer;
}

.reset-button:hover {
    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.343);
    background-color: #a1a562;
}


/* Dialog box styling: 
    * Winner
    * Game draw
*/
.model {
    display: none;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 300px;
    height: auto;
    background: #ffffff;
    padding: 15px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    text-align: center;
    border-radius: 10px;
    z-index: 10;
    font-family: "Roboto", serif;
    font-optical-sizing: auto;
}

.utility {
    padding: 5px;
    margin-top: 10px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    float: right;
    gap: 1.2vmin;
}

.model-content button {
    margin: 0;
    padding: 10px;
    background: #e42803e4;
    border-radius: 5px;
    color: white;
    border: none;
    cursor: pointer;
    font-family: "Roboto", serif;
}

.restartGame {
    margin: 0;
    padding: 10px;
    background: #e42803e4;
    border-radius: 5px;
    color: white;
    border: none;
    cursor: pointer;
    font-family: "Roboto", serif;
}

.model-content button:hover {
    background: #f72601;
}

/* blur-effect*/
.blur {
    filter: blur(10px);
}

